# prime-gen

./: .gitignore  CMakeLists.txt
include/: bn.h  prime.h
src/: CMakeLists.txt  bn.c  bn_add.c  bn_conv.c  bn_div.c  bn_mod.c  bn_mul.c  bn_print.c  bn_shift.c  bn_sqr.c  bn_word.c  consts.c  main.c  prime_gcd.c  prime_gen.c  prime_mont.c  prime_rand.c  prime_test.c
